[Updated] revise the name to 選取分組

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <div class="filter-buttons">
             <button class="group-btn" onclick="showGroupPicker()">
                 <i class="fas fa-layer-group"></i>
-                <span id="groupBtnText">創建分組</span>
+                <span id="groupBtnText">選取分組</span>
             </button>
             <button class="group-filter-btn" onclick="toggleGroupFilter()" id="groupFilterBtn">
                 <i class="fas fa-filter"></i>
